@@ -1,3 +1,11 @@
+2002-03-09  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03093] Re: gopher broken 
+		(Re: Bug#137287: w3m: segfault on gopher://xxxx.xxx URI)
+	* file.c (loadGopherDir): fix ->ptr
+		q should be url_quote()
+	* url.c (openURL): url_unquote() for gopher selector
+
 2002-03-09  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03090] Re: gopher broken 
@@ -3082,4 +3090,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.337 2002/03/08 15:16:02 ukai Exp $
+$Id: ChangeLog,v 1.338 2002/03/08 15:59:25 ukai Exp $
